--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
   firebase_core: ^3.4.0
+  firebase_database: ^11.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
