--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   latlong2: ^0.9.1
   firebase_core: ^3.4.0
   firebase_database: ^11.1.1
+  location: any
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
